--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "scipy~=1.7.0",
     "typer~=0.6.0",
     "six~=1.16.0",
+    "loguru~=0.6.0"
 ]
 dynamic = [
     "version",
